--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,6 +14,13 @@ body {
 }
 
 h1{
-background-color: pink;
-}
+    font-size: 63px;
+    }
 
+h2{
+    font-size: 48px;
+        }
+
+h3{
+    font-size: 18px;
+ }
