--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -13,14 +13,40 @@ body {
     font-family: 'Proxima Nova Alt';
 }
 
+section {
+    padding: 5%;
+}
+
 h1{
     font-size: 63px;
     }
 
 h2{
     font-size: 48px;
-        }
+    color: #1A424B;
+    text-align: left;
+    margin-bottom: 20px;
+}
 
 h3{
     font-size: 18px;
  }
+
+ p {
+    color: #1A424B;
+    font-size: 15px;
+ }
+
+ .btn-yellow{
+    background-color: #FCE977;
+    border-radius: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    color: #1A424B;
+    font-weight: bold;
+    border: none;
+    margin-top: 20px;
+    width: fit-content;
+  }
