--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -129,3 +129,18 @@ padding-top: 15px;
     background-color: #FCE977;
 }
  /* Nu slutter reviews style  */
+
+
+ /* FORSIDE */
+
+ .buttom-divider {
+    display: flex;
+    padding-bottom: 40px;
+    padding-top: 40px;
+    border-bottom: 2px #e6f1f0 solid;
+    gap: 60px;
+  }
+  
+  .buttom-divider div {
+    width: 50%;
+  }
