--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -144,3 +144,11 @@ padding-top: 15px;
   .buttom-divider-width{
     width: 50%;
   }
+
+  .list {
+    display: flex;
+}
+
+.list img {
+    margin-right: 10px;
+}
