--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -184,3 +184,8 @@ padding-top: 15px;
     background-color: #daeced;
     padding: 20px;
   }
+
+.green-card {
+  background-color: #00454E;
+  padding: 20px;
+}
