--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -189,3 +189,11 @@ padding-top: 15px;
   background-color: #00454E;
   padding: 20px;
 }
+
+.green-card p {
+  color: white;
+}
+
+.green-card h3 {
+  color: white;
+}
