--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,13 +4,8 @@
     line-height: 30px;
 }
 
-@font-face {
-    font-family: 'Proxima Nova Alt';
-    src: url('../assets/fonts/ProximaNovaA-Regular.woff') format('woff');
-}
-
 body {
-    font-family: 'Proxima Nova Alt';
+    font-family: "proxima-nova";
     background-color: #E6F1F0;
 }
 
