--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -159,9 +159,10 @@ padding-top: 15px;
 
  /*Tjekliste*/
  #tjekliste-baggrund {
-  background-image: url("../assets/img/baggrund-tjekliste(2).svg");
+  background-image: url("../assets/img/tjekliste.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position:right;
 
 }
 
