--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -25,6 +25,8 @@ section {
 
 h1{
     font-size: 63px;
+    color: #1A424B;
+
     }
 
 h2{
@@ -36,6 +38,12 @@ h2{
 
 h3{
     font-size: 18px;
+    color: #1A424B;
+ }
+
+ h4 {
+  color: #1A424B;
+
  }
 
  p {
