--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -204,12 +204,13 @@ padding-top: 15px;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-around;
   flex-wrap: wrap;
-  width: 900px;
+  gap: 40px;
+  width: 50%;
 }
 
 .semester-opdeling {
-  margin: 20px 150px 20px 100px;
   display: flex;
   flex-direction: column;
 }
@@ -217,6 +218,7 @@ padding-top: 15px;
 .flex-overordnet {
   display: flex;
   justify-content: center;
+  gap: 40px;
 }
 
 .check-img {
@@ -426,7 +428,34 @@ p {
     flex-direction: column;
   }
 
+  #reviews_img{ 
+    width: 80px;
+    height: 80px;
+  }
+
+  .reviews_wrapper {
+    gap: 20px;
+  }
+
+
 }
+
+
+@media screen and (max-width: 700px) {  
+
+  .style_reviews{ 
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
+
+  .style_reviews div {
+    text-align: center;
+  }
+
+}
+
+
+
 
 
 
