--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -271,7 +271,7 @@ padding-top: 15px;
 .info-box {
   padding-bottom: 40px;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
 }
 
@@ -280,7 +280,6 @@ padding-top: 15px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 182px;
   width: 100%;
   display: flex;
   align-items: center;
