--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -155,13 +155,22 @@ button {
 }
 
 .btn-div {
-  background-color: #cae4e3;
+  background-color: #fce977;
   width: 50px;
   height: 50px;
   color: #1a444d;
   align-content: center;
   font-size: 50px;
 }
+
+.btn-div:hover {
+  background-color: #F7ECA7;
+}
+
+.btn-div:focus {
+  background-color: #FAE13E;
+}
+
 .carousel-btn {
   background: none;
   border: none;
@@ -169,9 +178,7 @@ button {
   border-style: none;
   cursor: pointer;
 }
-.btn-div:hover {
-  background-color: #fce977;
-}
+
 .reviews_container {
   display: flex;
   justify-content: center;
