--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -479,7 +479,7 @@ button {
 
 @media screen and (max-width: 1100px) {
   .main-wrap {
-    top: 165px;
+    top: 145px;
     flex-direction: column;
   }
 
@@ -502,4 +502,8 @@ button {
   .style_reviews div {
     text-align: center;
   }
+}
+
+@media screen and (max-width: 465px) { 
+  
 }
