--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,6 +17,7 @@
   margin: 0;
   padding: 0;
   line-height: 30px;
+  box-sizing: border-box;
 }
 
 body {
@@ -77,7 +78,6 @@ button {
   position: relative;
   background-color: white;
   max-width: 1200px;
-  margin-top: 3%;
 }
 
 .btn-yellow {
@@ -479,7 +479,7 @@ button {
 
 @media screen and (max-width: 1100px) {
   .main-wrap {
-    top: 145px;
+    top: 150px;
     flex-direction: column;
   }
 
@@ -505,5 +505,7 @@ button {
 }
 
 @media screen and (max-width: 465px) { 
-  
+  .main-wrap {
+    top: 135px;
+  }
 }
